@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST settingslogic-2.0.3.gem 7680 RMD160 e447d99aa543cd4f394ab46428b4e5f148206fa3 SHA1 1621d5b36635f576600e640283595784178a0b9f SHA256 a2283c6f8f876bfc0753cec70e2e04b1b1989da88bfc0929dc11912c197c8ce8
 DIST settingslogic-2.0.6.gem 10752 RMD160 a6a0dc87f059e2818f3c76d905d048d95d242f1b SHA1 b2f5e6b9f273eb51f7ffeb563d91986ece0d5b6a SHA256 8eea8b78b3a21b776989063362cf666044fedb282e659af04c1cb36ce3c6fce4
-EBUILD settingslogic-2.0.3.ebuild 462 RMD160 4573eaa89ea8a4b229f8434136f57898d4611199 SHA1 21e0bb3d5e70ba564b7efaf5bb906d319fa9dd82 SHA256 7cf19bc372c06ae4f6171d9dcf49ce69a9c76300b2955b7ccad25af5ad55fb2b
 EBUILD settingslogic-2.0.6.ebuild 462 RMD160 9c3e4064e048456a26ce55170ba38e46430f9a3b SHA1 de172ae89cacd48a5f6c2cbc74fcaacdcbfb99ba SHA256 1f2634280232d6f49762b7c6e954119dd9ca108c88e3e2e2e8ad70bbef34f63c
-MISC ChangeLog 408 RMD160 33015eabcda4b0d868e24edebee914b7fdd90d54 SHA1 09518eb3611e60d1e996958915c5525ee20f4d7c SHA256 39ae8e84945a63d7e317f16c03f48b753b3e2601e713a19398d9f779cd48cd70
+MISC ChangeLog 512 RMD160 e7e81f7c2d74bc538dd84842bf2f7e89416bf1de SHA1 fd762f63efdd5f417da650c6334e7055d2367dd2 SHA256 5ff577fab43dbe324f5df0add50b8e3494555d9d307a95ea5988bacfce14a73f
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvkB5QACgkQeM7EJeUH71PzbACeMHqKP/mv4PBeDWXf4UnrhBXJ
-GBoAn2TqRiVcFXZarleqykdbMgStDWmh
-=uRz5
+iF4EAREIAAYFAkxazgQACgkQZihJkut28SuGXAD/QlzNKvaux/VwY3ezWwUBzRDz
+u6j65p3rVZCkzQ0knw4BAKXawZEowroL+GQjWLH+5DFcJrL9yzd7uWL5HUBp3KHV
+=S3jk
 -----END PGP SIGNATURE-----
