@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Aug 2010; Hans de Graaff <graaff@gentoo.org>
+  -settingslogic-2.0.3.ebuild:
+  Remove old version.
+
 *settingslogic-2.0.6 (07 May 2010)
 
   07 May 2010; Hans de Graaff <graaff@gentoo.org>
